--- a/style/css/styles-localstores.css
+++ b/style/css/styles-localstores.css
@@ -1,6 +1,5 @@
 .text-localstores{
     top: 120px;
-    left: 540px;
 }
 .location-item{
     padding-right: 15px;
