--- a/style/css/styles-product.css
+++ b/style/css/styles-product.css
@@ -1,5 +1,5 @@
-.brand-product {
-    left: 290px;
+.brand-product span{
+    color: #00c8c8;
 }
 .product-details-in-slider{
     margin-bottom: 100px;
